# cpp-qgis-plugin-example

./: CMakeLists.txt  LICENSE  MODULE.bazel  OSGeo4W_dev.bat  README.md  env.bat  qgis_hello_world.cpp  qgis_hello_world.h  qgis_hello_world.pro
.github/workflows/: build-bazel.yaml  build-linux.yaml  build-macos-dependencies.yaml  build-macos.yaml  build-windows-dependencies.yaml  build-windows.yaml  build_windows.yaml
bazel/: BUILD.bazel  qgis_deps.bzl
cmake/: FindGDAL.cmake  FindQGIS.cmake
dependencies/qgis/linux_x86_64/: readme.md
dependencies/qgis/linux_x86_64/3_10_4/include/qgis/: qgsconfig.h  ui_qgsarcgisservicesourceselectbase.h  ui_qgsauthauthoritieseditor.h  ui_qgsauthcertificatemanager.h  ui_qgsauthconfigedit.h  ui_qgsauthimportcertdialog.h  ui_qgsauthmethodplugins.h  ui_qgsauthserverseditor.h  ui_qgsauthsettingswidget.h  ui_qgsauthsslimporterrors.h  ui_qgsauthtrustedcasdialog.h  ui_qgscredentialdialog.h  ui_qgsgenericprojectionselectorbase.h  ui_qgsmessagelogviewer.h  ui_qgsmessageviewer.h  ui_qgsowssourceselectbase.h  ui_qgsquerybuilderbase.h  ui_qgssqlcomposerdialogbase.h
dependencies/qgis/linux_x86_64/rel/3_10_4/lib/: libqgis_analysis.so.3.10.4
dependencies/qgis/macos_x86_64/3_30_3/src/ui/: ui_map3dconfigwidget.h  ui_polygon3dsymbolwidget.h  ui_qgisapp.h  ui_qgs25drendererwidgetbase.h  ui_qgsaddattrdialogbase.h  ui_qgsaddtaborgroupbase.h  ui_qgsadvanceddigitizingdockwidgetbase.h  ui_qgsadvanceddigitizingfloaterbase.h  ui_qgsadvancedsettingswidget.h  ui_qgsannotationcommonpropertieswidgetbase.h  ui_qgsannotationpointtextwidgetbase.h  ui_qgsattributeformcontaineredit.h  ui_qgsattributetypeedit.h  ui_qgsattributewidgeteditgroupbox.h  ui_qgsbookmarkeditordialog.h  ui_qgsbookmarksbase.h  ui_qgscodeditorsettings.h  ui_qgscoordinateoperationwidgetbase.h  ui_qgsdatetimeeditconfig.h  ui_qgsdwgimportbase.h  ui_qgsdxfexportdialogbase.h  ui_qgsexpressionbuilderdialogbase.h  ui_qgsformannotationdialogbase.h  ui_qgsgdalsourceselectbase.h  ui_qgslayoutelevationprofilewidgetbase.h  ui_qgslayoutimageexportoptions.h  ui_qgslayoutlegendwidgetbase.h  ui_qgslayoutpolygonwidgetbase.h  ui_qgslayoutscalebarwidgetbase.h  ui_qgsmapcanvasdockwidgetbase.h  ui_qgsmeshelevationpropertieswidgetbase.h  ui_qgsmeshrendererscalarsettingswidgetbase.h  ui_qgsmetadatawidget.h  ui_qgsmodeldesignerdialogbase.h  ui_qgsnewdatabasetablenamewidget.h  ui_qgsnewgeopackagelayerdialogbase.h  ui_qgsogrsourceselectbase.h  ui_qgsoptionsbase.h  ui_qgspdfexportoptions.h  ui_qgspgnewconnectionbase.h  (+24 more)
dependencies/qgis/macos_x86_64/3_32_3/src/ui/: ui_qgsannotationlinetextwidgetbase.h  ui_qgsannotationwidgetbase.h  ui_qgsattributewidgeteditgroupbox.h  ui_qgsauthimportidentitydialog.h  ui_qgsbrowserpropertiesdialogbase.h  ui_qgscalendarconfigdlgbase.h  ui_qgscolordialog.h  ui_qgscompoundcolorwidget.h  ui_qgsdecorationgriddialog.h  ui_qgsdecorationtitledialog.h  ui_qgsfeatureselectiondlg.h  ui_qgsglobdomainwidgetbase.h  ui_qgsgradientcolorrampdialogbase.h  ui_qgsidentifyresultsbase.h  ui_qgslayout3dmapwidgetbase.h  ui_qgslayoutattributetablewidgetbase.h  ui_qgslayoutmapgridwidgetbase.h  ui_qgslayoutmarkerwidgetbase.h  ui_qgslayoutpagepropertieswidget.h  ui_qgsnewogrconnectionbase.h  ui_qgsoptionsbase.h  ui_qgspercentagenumericformatwidgetbase.h  ui_qgspointcloudelevationpropertieswidgetbase.h  ui_qgspointcloudlayersaveasdialogbase.h  ui_qgspointcloudquerybuilderbase.h  ui_qgspointcloudrendererpropsdialogbase.h  ui_qgsprocessingalgorithmprogressdialogbase.h  ui_qgsprocessinghelpeditorwidgetbase.h  (+22 more)
dependencies/qgis/windows_x86_64/: source.txt
src/: BUILD  CMakeLists.txt  qgis_hello_world.cpp  qgis_hello_world.h
vcpkg/ports/o2/: portfile.cmake
(+2628 files in other folders)
