module(
	name = "cpp_qgis_plugin_example",
	version = "0.1.0",
)

bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "nlohmann_json", version = "3.12.0.bcr.1")
bazel_dep(name = "rules_cc", version = "0.2.17")
bazel_dep(name = "rules_qt", version = "0.0.0")

git_override(
	module_name = "rules_qt",
	remote = "https://github.com/Vertexwahn/rules_qt6.git",
	commit = "a986944a1f0eb0aa5e5fedafdf3ac72577f5c628",
)

qt = use_extension("@rules_qt//extension:qt.bzl", "fetch")

qt.install(
	name = "qt_linux_x86_64",
	build_file = "@rules_qt//extension:qt/6.8.3/linux_x86_64.BUILD",
	os = "linux",
	version = "6.8.3",
)

qt.install(
	name = "qt_windows_x86_64",
	build_file = "@rules_qt//extension:qt/6.8.3/windows_x86_64.BUILD",
	os = "windows",
	version = "6.8.3",
	windows_architecture = "win64_msvc2022",
)

qt.install(
	name = "qt_mac_aarch64",
	build_file = "@rules_qt//extension:qt/6.8.3/mac_aarch64.BUILD",
	os = "macos",
	version = "6.8.3",
)

qt.install(
	name = "qt_mac_x86_64",
	build_file = "@rules_qt//extension:qt/6.8.3/mac_x86_64.BUILD",
	os = "macos",
	version = "6.8.3",
)

use_repo(
	qt,
	"qt_linux_x86_64",
	"qt_windows_x86_64",
	"qt_mac_aarch64",
	"qt_mac_x86_64",
)

register_toolchains("@rules_qt//tools:all")

qgis = use_extension("//bazel:qgis_deps.bzl", "qgis_ext")
qgis.qgis(name = "qgis")
use_repo(qgis, "qgis")
